Mon May 24 12:58:06 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added const checking to configure and reordered some include
	files to put conf.h on top.

Tue May 18 20:07:41 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added log-bad-space token and added expand_buf into chunk.c.

	* Create log_bad_pnt in chunk.  Probably broke stuff.
	Translated some flag to BIT_FLAG format.

	* Updated README and started ftp site thanks to doug.

Thu May 13 00:56:39 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.4.

	* Pretty stable now for a while.  Trying to get access to a ftp
	for distribution ease.

Thu May  6 11:26:03 1993  Gray Watson  (gray at toaster.antaire.com)

	* Added new fix-patch script for myself.  Fixed malloc_t by
	removing LOCAL/EXPORT, etc.

Fri Apr 30 15:26:12 1993  Gray Watson  (gray at toaster.antaire.com)

	* Removed some heap checks in malloc.c per bali's comments and
	fixed some of the error strings.

	* Moved around some defines and changes include ordering.

	* Added -v option to malloc_dbg to provide verbose output
	especially for dumping currently set debug tokens from
	MALLOC_DEBUG variable.

Mon Apr 19 16:04:17 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.3.

	* Made some changes to a lot of comments, notes files, and ttd
	file.

Thu Apr 15 17:44:41 1993  Gray Watson  (gray at toaster.antaire.com)

	* Renamed malloc.h to malloc_dbg.h and libmalloc.a to
	libmalloc_dbg.a.  Added heap-extension checking and verification
	to make sure no-one extends the heap using sbrk behind out back.
	Fixed calloc to have the number of elements be a size_t to (WHY??
	It's not a size!!).  Fixed malloc_t free problems.

Wed Apr 14 18:11:00 1993  Gray Watson  (gray at toaster.antaire.com)

	* Released version 1.2.2.

	* Added some more point checking tests to malloc_str.  Added
	MALLOC_SIZE to some more places.  Completely ifdef'ed compat.h.